--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,19 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Song Database</title>
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"/>
-</head>
-<body class='bg-dark'>
+<main class='bg-dark'>
     <div class="jumbotron jumbotron-fluid bg-dark text-center pt-5 pb-3 mb-5">
         <div class="container text-light">
-          <h1 class="display-4">Song Database</h1>
-          <p class="lead my-3">Create your own database of your favorite songs.</p>
-          <p>You can search for songs, insert songs, update songs or delete songs.</p>
+            <h1 class="display-4">Song Database</h1>
+            <p class="lead my-3">Create your own database of your favorite songs.</p>
+            <p>You can search for songs, insert songs, update songs or delete songs.</p>
         </div>
     </div>
 
@@ -55,9 +45,4 @@
             </div>
         </div>
     </div>
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" ></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-</body>
-</html>
+</main>
