--- a/views/update.handlebars
+++ b/views/update.handlebars
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Update Database</title>
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"/>
-    <link rel='stylesheet' href='./assets/css/styles.css'/>
-</head>
-<body class='bg-dark' id='update-page'>
+<main class='bg-dark' id='update-page'>
     <div class="jumbotron jumbotron-fluid bg-dark text-center pt-5 pb-3 mb-0">
         <div class="container text-light">
           <h1 class="display-4">Song Database</h1>
@@ -42,24 +31,23 @@
                 </label>
             </div>
         </div>
+    </form>
 
+    <form class='text-light mx-5' method='POST' action='/update'>
         <div class='container'>
             <div class='col-md-8 mx-auto mt-3'>
                 <div class="form-group">
                     <label for="ref-input" id='ref-label'>Enter Current Title</label>
-                    <input type="text" class="form-control" id="ref-input">
+                    <input type="text" class="form-control" id="ref-input" name='update-ref'>
                     <label for="update-input" id='update-label'>Enter New Title</label>
-                    <input type="text" class="form-control" id="update-input">
+                    <input type="text" class="form-control" id="update-input" name='update-input'>
                 </div>
                 <button id='update-btn' type="submit" class="btn btn-warning text-light px-5">Update</button>
             </div>
         </div>
     </form>
 
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" ></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src='index.js'></script>
-</body>
-</html>
+    <div class='text-white'>
+        <p id='update-msg'></p>
+    </div>
+</main>
