add index page layout and delete alert message

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,8 +7,8 @@
         </div>
     </div>
 
-    <div class='row'>
-        <div class='col md-3 m-3 ml-5'>
+    <div class='row justify-content-center mx-2'>
+        <div class='col-12 col-md-6 my-2'>
             <div class="card bg-dark text-light border-light">
                 <div class="card-body text-center">
                     <h5 class="card-title">Add to Database</h5>
@@ -17,7 +17,7 @@
                 </div>
             </div>
         </div>
-        <div class='col md-3 m-3'>
+        <div class='col-12 col-md-6 my-2'>
             <div class="card bg-dark text-light border-light">
                 <div class="card-body text-center">
                     <h5 class="card-title">Search the Database</h5>
@@ -26,7 +26,10 @@
                 </div>
             </div>
         </div>
-        <div class='col md-3 m-3'>  
+    </div>
+
+    <div class='row justify-content-center mx-2'>
+        <div class='col-12 col-md-6 my-2'>  
             <div class="card bg-dark text-light border-light">
                 <div class="card-body text-center">
                     <h5 class="card-title">Update the Database</h5>
@@ -35,11 +38,11 @@
                 </div>
             </div>
         </div>
-        <div class='col md-3 m-3 mr-5'>
+        <div class='col-12 col-md-6 my-2'>
             <div class="card bg-dark text-light border-light">
                 <div class="card-body text-center">
                     <h5 class="card-title">Delete from Database</h5>
-                    <p class="card-text">Enter a song title you want to remove from the database.</p>
+                    <p class="card-text">Enter a song title to remove from the database.</p>
                     <a href="/delete" class="btn btn-danger px-5">Delete</a>
                 </div>
             </div>
