--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -55,10 +55,17 @@
     transition: 500ms;
     transition: 500ms;
 }
+.update {
+    background-color: rgb(204, 204, 204);
+}
 
 /* When input is checked change slider background color to blue */
 input:checked + .slider {
     background-color: rgb(2,117,216);
+}
+
+input:checked + .update {
+    background-color: rgb(255, 214, 32);
 }
   
 /* When input is selected with tab then give slider a box-shadow */
@@ -66,11 +73,15 @@ input:focus + .slider {
     box-shadow: 0 0 5px rgb(2,117,216);
 }
 
+input:focus + .update {
+    box-shadow: 0 0 5px rgb(255, 214, 32);
+}
+
 /*  When input is checked translate slider toggle to the right */
 input:checked + .slider:before {
     transform: translateX(26px);
 }
 
-/* #results-container {
-    color: white;
-} */
+#alert-msg-container {
+    display: none;
+}
