--- a/views/delete.handlebars
+++ b/views/delete.handlebars
@@ -7,19 +7,20 @@
         </div>
     </div>
 
-    <form method='POST' action='/delete'>
+    <form class='text-light mx-5' method='POST' action='/delete'>
         <div class='container text-light'>
             <div class='col-md-8 mx-auto mt-3'>
                 <div class="form-group">
                     <label for="delete-title">Enter Song Title</label>
                     <input type="text" class="form-control" id="title-delete" name='title'>
-                    <button id='delete-btn' type="submit" class="btn btn-danger px-5 my-2">Delete</button>
+                    <button id='delete-btn' type="submit" class="btn btn-danger px-5 my-3">Delete</button>
                 </div>
             </div>
         </div>
     </form>
 
-    <div class='text-light'>
-        <p id='delete-msg'></p>
+    <div id='alert-msg-container' class="alert alert-danger col-md-6 mx-auto mt-5 text-center" role="alert">
+        <span id='delete-msg'></span>
+        <a href="#" class="alert-link">Go back home?</a>
     </div>
 </main>
