--- a/views/delete.handlebars
+++ b/views/delete.handlebars
@@ -1,4 +1,13 @@
 <main class='bg-dark' id='delete-page'>
+
+    <div id='alert-msg-container' class="alert alert-danger justify-content-center col-10 col-md-6 mx-auto mt-5 text-center" role="alert">
+        <span id='delete-msg'></span>
+        <a href="/" class="alert-link">Go back home?</a>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+
     <div class="jumbotron jumbotron-fluid bg-dark text-center pt-5 pb-3 mb-0">
         <div class="container text-light">
           <h1 class="display-4">Song Database</h1>
@@ -19,8 +28,4 @@
         </div>
     </form>
 
-    <div id='alert-msg-container' class="alert alert-danger col-md-6 mx-auto mt-5 text-center" role="alert">
-        <span id='delete-msg'></span>
-        <a href="#" class="alert-link">Go back home?</a>
-    </div>
 </main>
