--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -45,16 +45,9 @@
         </div>
     </form>
 
-    <div id='results-container' class='text-light'></div>
+    <div class="col col-sm-8 mx-auto m-5" id='results-div'>
+        <h5 class="card-header bg-primary text-light">Search Results:</h5>
+        <div class="card-body bg-light" id='results-container'></div>
+    </div>
     
 </main>
-
-{{!-- <ul>
-  {{#each playlist}}
-  	<li>
-  	   <p>Title: {{title}}</p>
-       <p>Artist: {{artist}}</p>
-       <p>Genre: {{genre}}</p>
-  	</li>
-  {{/each}}
-</ul> --}}
