--- a/views/insert.handlebars
+++ b/views/insert.handlebars
@@ -1,11 +1,21 @@
 <main class='bg-dark' id='insert-page'>
-    <div class="jumbotron jumbotron-fluid bg-dark text-center pt-5 pb-3 mb-0">
+
+    <div id='alert-msg-container' class="alert alert-success justify-content-center col-10 col-md-6 mx-auto mt-5 text-center" role="alert">
+        <span id='insert-msg'></span>
+        <a href="/" class="alert-link">Go back home?</a>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+
+    <div class="jumbotron jumbotron-fluid bg-dark text-center pt-5 pb-3 mb-2">
         <div class="container text-light">
           <h1 class="display-4">Song Database</h1>
           <p class="lead my-3">Create your own database of your favorite songs.</p>
           <p>Insert a song by entering a title, artist and genre.</p>
         </div>
     </div>
+
     <form class='text-light mx-5' method='POST' action='/insert'>
         <div class='container'>
             <div class='col-md-8 mx-auto'>
@@ -26,7 +36,4 @@
         </div>
     </form>
 
-    <div class='text-light'>
-        <p id='insert-msg'></p>
-    </div>
 </main>
