--- a/views/update.handlebars
+++ b/views/update.handlebars
@@ -1,4 +1,13 @@
 <main class='bg-dark' id='update-page'>
+
+    <div id='alert-msg-container' class="alert alert-warning justify-content-center col-10 col-md-6 mx-auto mt-5 text-center" role="alert">
+        <span id='update-msg'></span>
+        <a href="/" class="alert-link">Go back home?</a>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+
     <div class="jumbotron jumbotron-fluid bg-dark text-center pt-5 pb-3 mb-0">
         <div class="container text-light">
           <h1 class="display-4">Song Database</h1>
@@ -47,7 +56,4 @@
         </div>
     </form>
 
-    <div class='text-white'>
-        <p id='update-msg'></p>
-    </div>
 </main>
